name: TSTool
version: 0.1
Cabal-Version: >= 1.2
description: MPEG-2 Transport Stream analysis and optimization tool
license: BSD3
author: Niko Korhonen
copyright: Niko Korhonen 2008-2012
maintainer: niko.korhonen@gmail.com
stability: alpha
synopsis: MPEG-2 Transport Stream analysis and optimization tool
Build-Type: Simple

Library
  hs-source-dirs: src
  Build-Depends:  base, containers, bytestring, binary
  ghc-options:    -O2 -funbox-strict-fields
  exposed-modules:
    MPEG.Tools.TransportBuffer, MPEG.Tools.Analyzer, MPEG.Tools.Optimizer,
    MPEG.TS.AdaptationField, MPEG.TS.TransportPacket,
    Statistics, StringUtils

Executable tstool
  hs-source-dirs: src
  Build-Depends:  base, containers, bytestring, binary
  Main-Is:        TSToolCLI.hs
  ghc-options:    -O2 -funbox-strict-fields
